# ambush

./: .gitignore  AGENTS.md  LICENSE  README.md  electron.vite.config.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.node.json  tsconfig.web.json
docs/: README.md  (+6 more)
engine/: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  README.md  deny.toml  docker-compose.yml
engine/.github/workflows/: ci.yml  release-sbom.yml
engine/crates/swarm-attest/: Cargo.toml
engine/crates/swarm-attest/src/: lib.rs
engine/crates/swarm-authority/: Cargo.toml
engine/crates/swarm-authority/src/: admission.rs  epoch.rs  error.rs  lib.rs  token.rs  util.rs  witness.rs
engine/crates/swarm-cli/: Cargo.toml
engine/crates/swarm-cli/src/: args.rs  core.inc  dispatch.rs  format.rs  lib.rs  tracing.rs
engine/crates/swarm-consensus/: Cargo.toml
engine/crates/swarm-consensus/src/: lib.rs
engine/crates/swarm-core/: Cargo.toml
engine/crates/swarm-core/src/: agent.rs  config.rs  lib.rs  observability.rs  pheromone.rs  telemetry.rs  types.rs  verdict.rs
engine/crates/swarm-crypto/: Cargo.toml
engine/crates/swarm-crypto/src/: canonical.rs  error.rs  hashing.rs  lib.rs  merkle.rs  receipt.rs  sandbox.rs  signing.rs
engine/crates/swarm-evolution/: Cargo.toml
engine/crates/swarm-evolution/src/: canary.rs  drafting.rs  evidence.rs  evolution.rs  governance_prep.rs  lib.rs  mutation.rs  portfolio.rs  promotion.rs  selection.rs  strategy.rs
engine/crates/swarm-governor/: Cargo.toml
engine/crates/swarm-governor/src/: lib.rs
engine/crates/swarm-guard/: Cargo.toml
engine/crates/swarm-guard/src/: computer_use.rs  egress_allowlist.rs  forbidden_path.rs  input_injection_capability.rs  lib.rs  mcp_tool.rs  patch_integrity.rs  path_allowlist.rs  path_normalization.rs  remote_desktop_side_channel.rs  secret_leak.rs  shell_command.rs
engine/crates/swarm-ingest-json/: Cargo.toml
engine/crates/swarm-ingest-json/src/: cloudtrail.rs  generic_json.rs  lib.rs  source.rs
engine/crates/swarm-ingest-sentinel/: Cargo.toml
engine/crates/swarm-ingest-sentinel/src/: lib.rs
engine/crates/swarm-ingest-tetragon/: Cargo.toml  build.rs
engine/crates/swarm-ingest-tetragon/src/: bridge.rs  client.rs  error.rs  lib.rs  mapper.rs
engine/crates/swarm-mcp-gate/: Cargo.toml
engine/crates/swarm-mcp-gate/src/: main.rs  mapping.rs  proxy.rs  receipt_log.rs
engine/crates/swarm-metering/: Cargo.toml
engine/crates/swarm-metering/src/: budget.rs  cost.rs  hierarchy.rs  lib.rs  spend.rs
engine/crates/swarm-pheromone/: Cargo.toml
engine/crates/swarm-pheromone/src/: jetstream.rs  lib.rs  substrate.rs
engine/crates/swarm-pheromone/tests/: jetstream.rs  multi_instance.rs
engine/crates/swarm-policy/: Cargo.toml
engine/crates/swarm-policy/src/: configurable_gate.rs  lib.rs  static_gate.rs
engine/crates/swarm-response/: Cargo.toml
engine/crates/swarm-response/src/: adapters.rs  config.rs  dead_letter.rs  dispatch.rs  http_edr.rs  lib.rs  notification.rs  resilience.rs  siem.rs  webhook.rs
engine/crates/swarm-runtime/: Cargo.toml  dead-letter.jsonl
engine/crates/swarm-runtime/benches/: hot_path.rs
engine/crates/swarm-runtime/examples/: behavioral_anomaly_quality_benchmark.rs  end_to_end_ingest_bench.rs  evolution_benchmark.rs  (+1 more)
engine/crates/swarm-siem/: Cargo.toml
engine/crates/swarm-spine/: Cargo.toml
engine/crates/swarm-whisker/: Cargo.toml
engine/data/approval-ledgers/: index.json
engine/data/approval-receipt-packs/: index.json
engine/data/approval-sets/: index.json
engine/data/approval-verdicts/: index.json
engine/docs/: AGENTS.md  ARC-UPSTREAM.md  ARCHITECTURE.md  CONFIGURATION.md  CONSENSUS.md  DR-RUNBOOK.md  EVOLUTION.md  INTEGRATION.md  PHEROMONES.md  PORTING-TRACKER.md  REFERENCE-STATUS.md  RESEARCH.md  ROADMAP.md  RUST_FIRST_MIGRATION.md  VENDOR-REFERENCES.md
engine/docs/benchmarks/: autonomous-evolution.md  behavioral-anomaly-quality.md  end-to-end-ingest.md  fast-detection.md
engine/docs/decisions/: 0001-rust-first-runtime.md
engine/docs/plans/: BRAINSTORM-v1.md  BRAINSTORM-v2.md
engine/fixtures/canary/: outlook-cmd.yaml  python-curl.yaml  word-powershell.yaml
engine/fuzz/: Cargo.toml  README.md
engine/fuzz/fuzz_targets/: attest_verify.rs  canonical_json.rs  merkle.rs  policy_parse.rs  secret_leak.rs  sha256.rs
engine/fuzz/mutators/: canonical_json.rs
engine/fuzz/src/: lib.rs
engine/rulesets/: attestation.json  code-agent.yaml  default.yaml  default.yaml.sig.json
engine/rulesets/evasion/: attack-technique-catalog.yaml
engine/rulesets/safety/: office-detector-admission.yaml
engine/scenario-suites/: evasion-breadth-v1.yaml  hellcat-office-v1.yaml  kill-chain-sequences-v1.yaml
engine/scenarios/: benign-baseline.yaml  benign-dns-baseline.yaml  credential-access-lsass.yaml  dns-tunneling-exfil.yaml  evasion-command-and-control-network.yaml  evasion-credential-access-harvest.yaml  evasion-data-exfiltration-dns.yaml  evasion-defense-evasion-fileless.yaml  evasion-execution-office-chains.yaml  evasion-lateral-movement-remote-admin.yaml  evasion-persistence-autostart.yaml  lateral-movement-wmi.yaml  msbuild-installutil-transfer-chain.yaml  office-dropper-correlation.yaml  outlook-mshta-transfer-chain.yaml  pdf-lolbin-execution.yaml  python-maintenance-benign.yaml  remote-service-stager-chain.yaml  scripting-encoded-powershell.yaml
engine/sequences/: kill-chain-v1.yaml
engine/tools/: check-runtime-panic-contract.sh  check-supply-chain.sh  generate-sbom.sh  with-nats-jetstream.sh
engine/verifications/: office-detector-safety-v1.yaml
eval/: .gitignore  README.md  config.py  demo_fixture.py  pyproject.toml  run_eval.py  schema.py
eval/attest/: verify.py
eval/corpora/: README.md  fetch.sh
eval/panels/: panels.py
eval/pipeline/: arms.py  consensus.py  evidence_gate.py  semgrep_arm.py
eval/runner/: lane_runner.py
eval/score/: adjudicate.py  gate_decision.py  matcher.py  metrics.py  stats.py
eval/tests/: test_consensus.py  test_demo_smoke.py  test_evidence_gate.py  test_gate_decision.py  test_matcher.py  test_metrics.py
(+257 files in other folders)
