[package]
name = "swarm-authority"
description = "Per-Vector signed continuation tokens + cryptographic recall (single-hop swarm authority). One token per Vector at deploy; recall bumps a signed revocation epoch so admission fails closed."
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
swarm-crypto.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[lints]
workspace = true
