[package]
name = "swarm-cli"
description = "Repo-owned operator CLI surface for Ambush Engine"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
clap = { version = "4.5", features = ["derive"] }
opentelemetry.workspace = true
opentelemetry_sdk.workspace = true
opentelemetry-otlp.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
swarm-core.workspace = true
swarm-crypto.workspace = true
swarm-runtime.workspace = true
tokio.workspace = true
tracing-opentelemetry.workspace = true
tracing-subscriber.workspace = true

[lints]
workspace = true
