[package]
name = "swarm-consensus"
description = "BFT consensus for critical swarm decisions (response actions, evolution commits)"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
swarm-core.workspace = true
swarm-crypto.workspace = true
async-trait.workspace = true
ed25519-dalek.workspace = true
hex.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
thiserror.workspace = true

[lints]
workspace = true
