[package]
name = "swarm-core"
description = "Core types, traits, and pheromone primitives for the swarm"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
async-trait.workspace = true
ed25519-dalek.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
anyhow.workspace = true
hex.workspace = true

[lints]
workspace = true
