[package]
name = "swarm-crypto"
description = "Cryptographic primitives — Ed25519, SHA-256, Merkle trees, canonical JSON"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
ed25519-dalek.workspace = true
chrono.workspace = true
sha2.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
hex.workspace = true
rand_core.workspace = true
ryu.workspace = true

[lints]
workspace = true
