[package]
name = "swarm-evolution"
description = "Evolution, canary, promotion, strategy, and evidence workflows for Ambush Engine"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = []
z3 = ["dep:z3"]

[dependencies]
ed25519-dalek.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
sha2.workspace = true
swarm-core.workspace = true
swarm-crypto.workspace = true
swarm-policy.workspace = true
swarm-runtime.workspace = true
swarm-whisker.workspace = true
thiserror.workspace = true
tokio.workspace = true
z3 = { version = "0.20", optional = true, features = ["gh-release"] }

[lints]
workspace = true
