[package]
name = "swarm-ingest-tetragon"
description = "Tetragon gRPC bridge that normalizes ProcessExec events into swarm telemetry"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
swarm-core.workspace = true
async-trait.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tonic.workspace = true
prost.workspace = true
prost-types.workspace = true
tracing.workspace = true
thiserror.workspace = true
serde_json.workspace = true

[build-dependencies]
tonic-build = "0.13"
prost-build = "0.13"
protoc-bin-vendored = "3"

[lints]
workspace = true
