[package]
name = "swarm-mcp-gate"
description = "MCP-wrap gate: proxy stdio JSON-RPC to an inner MCP server, gating every tools/call through swarm-governor and logging signed receipts (the real chio mcp wrap equivalent)"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
swarm-governor.workspace = true
swarm-crypto.workspace = true
swarm-metering.workspace = true
serde.workspace = true
serde_json.workspace = true
fs2 = "0.4"

[[bin]]
name = "swarm-mcp-gate"
path = "src/main.rs"

[lints]
workspace = true
