[package]
name = "swarm-pheromone"
description = "Pheromone substrate — deposit, query, decay over NATS JetStream"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = ["nats"]
nats = ["dep:async-nats", "dep:tokio-stream"]

[dependencies]
swarm-core.workspace = true
swarm-crypto.workspace = true
ed25519-dalek.workspace = true
async-trait.workspace = true
async-nats = { workspace = true, optional = true }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-stream = { workspace = true, optional = true }
tracing.workspace = true
thiserror.workspace = true
sha2.workspace = true
hex.workspace = true

[lints]
workspace = true
