[package]
name = "swarm-whisker"
description = "Streaming detection agents — Rust-native, no LLM per signal"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
swarm-core.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
thiserror.workspace = true

[lints]
workspace = true
